Moved CSS into separate file

--- a/index.html
+++ b/index.html
@@ -3,39 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Index</title>
-    <style>
-        * { margin: 0; padding: 0 }
-        html {
-          min-height: 100%;
-        }
-        body {
-            display: flex;
-            align-content: center;
-            justify-content: center;
-        }
-        main {
-            margin-top: 25%;
-            width: 360px;
-            height: 480px;
-            
-            background: pink;
-        }
-        .frame {
-            -visibility: collapse;
-            display: none;
-            
-            align-content: stretch;
-            justify-content: center;
-        }
-        .frame > p {
-            margin-top: 30%;
-            text-align: center;
-        }
-        .frame > * {
-            margin-left: 30%;
-            width: 40%;
-        }
-    </style>
+    <!-- Moved the css to a different file for organizational purposes -->
+    <link rel="stylesheet" type="text/css" href="./index.css">
   </head>
   
   <body>
