Added desktop notifications and notification buttons

--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
                         <label for="NumSessions">Sessions</label>
                         <input type="number" id="NumSessions" name="NumSessions" min="1" value="4">
                     </form>
-                    <input class="check-grid" type="checkbox" id="VisualCheck" name="VisualCheck">
-                    <label id="VisualLabelC" for="VisualCheck"> Enable desktop notifications</label>
-                    <input class="check-grid" type="checkbox" id="AudioCheck" name="AudioCheck">
-                    <label id="AudioLabelC" for="AudioCheck"> Enable audio</label>
+                    <button id="EnableNotifButton">Enable Notifications</button>
+                    <button id="EnableAudioButton">Enable Audio</button>
                 </div>
                 <button id="BeginButton" class="button button-start">
                     Begin Timer
