Changed colors of settings buttons

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         <label for="NumSessions">Sessions</label>
                         <input type="number" id="NumSessions" name="NumSessions" min="1" value="4">
                     </form>
-                    <button id="EnableNotifButton">Enable Notifications</button>
-                    <button id="EnableAudioButton">Enable Audio</button>
+                    <button class="button" style="text-transform:none;" id="EnableNotifButton">Enable Notifications</button>
+                    <button class="button" style="text-transform:none;" id="EnableAudioButton">Enable Audio</button>
                 </div>
                 <button id="BeginButton" class="button button-start">
                     Begin Timer
