--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
-<body>
+<body onload="resetForm()">
     <main id="MainContainer">
         <!-- The start menu frame --> 
         <div id="StartFrame" class="frame" style="visibility: visible">
@@ -21,22 +21,29 @@
         <!-- The settings menu frame --> 
         <div id="SettingsFrame" class="frame">
             <div class="contentWrapper">
-                <p>Set session timers <wbr>(in minutes)</p><br>
-                </div>
-                <div class="settings-grid">
+                <p>Set session timers</p><br>
+                <div>
                     <!-- Submitting the form reloads the page, so no submit button was added -->
-                    <form id="SettingsForm" class="form-grid-1">
-                        <label for="WorkTime">Work</label>
-                        <input type="number" id="WorkTime" name="WorkTime" min="1" value="25">
+                    <form id="SettingsForm" onsubmit="return false;">
+                        <label for="WorkTime">Work (minutes)</label>
+                        <input type="number" id="WorkTime" name="WorkTime" value="25" min="1" max="60">
                         
-                        <label for="BreakTime">Break</label>
-                        <input type="number" id="BreakTime" name="BreakTime" min="1" value="5">
+                        <label for="BreakTime">Break (minutes)</label>
+                        <input type="number" id="BreakTime" name="BreakTime" value="5" min="1" max="30">
                         
                         <label for="NumSessions">Sessions</label>
-                        <input type="number" id="NumSessions" name="NumSessions" min="1" value="4">
+                        <input type="number" id="NumSessions" name="NumSessions" value="4" min="1" max="10">
                     </form>
-                    <button class="button" style="text-transform:none;" id="EnableNotifButton">Enable Notifications</button>
-                    <button class="button" style="text-transform:none;" id="EnableAudioButton">Enable Audio</button>
+                    <br>
+                    <div style="white-space: nowrap;">
+                        <input type="checkbox" id="EnableNotifButton" name="EnableNotifButton" autocomplete="off">
+                        <label for="EnableNotifButton" style="white-space: nowrap;">Enable Notifications</label>
+                    </div>
+                    <br>
+                    <div style="white-space: nowrap;">
+                        <input type="checkbox" id="EnableAudioButton" name="EnableAudioButton" autocomplete="off">
+                        <label for="EnableAudioButton" style="white-space: nowrap;">Enable Audio</label>
+                    </div>
                 </div>
                 <button id="BeginButton" class="button button-start">
                     Begin Timer
