--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Simple Pomodoro</title>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./pomodoro.css">
 </head>
 
 <body onload="resetForm()">
@@ -95,6 +95,6 @@
     <audio id="Jingle2" src="./assets/audio/Jingle2.mp3" type="audio/mpeg"></audio>
 </body>
 
-<script src="./scripts/index.js"></script>
+<script src="./scripts/pomodoro.js"></script>
 
 </html>
